objects/Holding_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holding Balances</relationshipLabel>
        <relationshipName>Holding_Balances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_USD__c</fullName>
        <formula>Market_Rate__r.Ratio_to_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base USD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Amount__c</fullName>
        <formula>Amount__c   /   Base_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Rate</label>
        <referenceTo>Market_Rate__c</referenceTo>
        <relationshipLabel>Holding Balances</relationshipLabel>
        <relationshipName>Holding_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Holding Balance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Converted_Amount__c</columns>
        <columns>Base_USD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Global Datawarehouse</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HB-{0000}</displayFormat>
        <label>Holding Balance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holding Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>